_generated-doc/2.16/config/quarkus-funqy-general-config-items.adoc

:summaryTableId: quarkus-funqy-general-config-items
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-funqy-general-config-items_configuration]]link:#quarkus-funqy-general-config-items_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-funqy-general-config-items_quarkus.funqy.knative-events.mapping.-mapping-.trigger]]`link:#quarkus-funqy-general-config-items_quarkus.funqy.knative-events.mapping.-mapping-.trigger[quarkus.funqy.knative-events.mapping."mapping".trigger]`

[.description]
--
Cloud Event type (ce-type) that triggers this function. Default value is function name. This config item is only required when there is more than one function defined within the deployment. The ce-type is not looked at if there is only one function in the deployment. The message will just be dispatched to that function. This allows you to change the knative trigger binding without having to change the configuration of the quarkus deployment.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FUNQY_KNATIVE_EVENTS_MAPPING__MAPPING__TRIGGER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FUNQY_KNATIVE_EVENTS_MAPPING__MAPPING__TRIGGER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-funqy-general-config-items_quarkus.funqy.knative-events.mapping.-mapping-.response-type]]`link:#quarkus-funqy-general-config-items_quarkus.funqy.knative-events.mapping.-mapping-.response-type[quarkus.funqy.knative-events.mapping."mapping".response-type]`

[.description]
--
If function has response output, then what is the Cloud Event type (ce-type)? This will default to ++{++function++}++.output

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FUNQY_KNATIVE_EVENTS_MAPPING__MAPPING__RESPONSE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FUNQY_KNATIVE_EVENTS_MAPPING__MAPPING__RESPONSE_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-funqy-general-config-items_quarkus.funqy.knative-events.mapping.-mapping-.response-source]]`link:#quarkus-funqy-general-config-items_quarkus.funqy.knative-events.mapping.-mapping-.response-source[quarkus.funqy.knative-events.mapping."mapping".response-source]`

[.description]
--
If function has response output, then what is the Cloud Event source (ce-source)? This will default to the function name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_FUNQY_KNATIVE_EVENTS_MAPPING__MAPPING__RESPONSE_SOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_FUNQY_KNATIVE_EVENTS_MAPPING__MAPPING__RESPONSE_SOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===